--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -35,6 +35,17 @@
                          <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">연주 게시판</h2>
                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                          <hr>
+                         <div class="well">
+                              <h2>인기 게시물</h2>
+                              <ul>
+                                   <li>1</li>
+                                   <li>2</li>
+                                   <li>3</li>
+                                   <li>4</li>
+                                   <li>5</li>
+                              </ul>
+                         </div>
+                         <hr>
                          <ul class="nav nav-pills">
                               <li role="presentation" class="dropdown">
                                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">카테고리 <span class="caret"></span></a>
